This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-Dec 2008 (Zesstra)
  - (port.h, port.c, efuns.h, efuns.c, func_spec, gcollect.c)
       added mkime(), an efun which converts a date/time information as
       returned by local_time() to a unix timestamp (integer value).
       added strftime(), an efun which converts a timestamp to a formatted
       string using a format string with a variety of format specifiers.
       changed caching behavious for ctime(): cache is now in the efun, not in
       port.c which spares the driver to search for the shared string and
       saves about 85% of execution time in case of cache hits. Removed
       caching in case of millisecond precision as cache hits are rather
       unlikely.
       Added handlers for the garbage collection which take care of the cache
       for ctime().
   - (main.c)
       use also locale defined in LC_TIME.

04-Oct 2008 (Zesstra)
  - (object.c)
    Allocate memory for the filename in f_save_object() and f_restore_object()
    on the heap instead of the stack. Use the generic error handler in
    save_object() and the already existing one in restore_object() to free the
    buffer in case of errors. Minor changes in error handling in
    f_restore_object() by pushing the handler earlier onto the stack and using
    it more often. Fixes crash with large filenames. (Bug #576)
  - (comm.c)
    Allocate memory for temporary buffers in send_erq() and send_udp() on the
    heap and not on the stack. Fixes crashes with large arguments. (Bug #577)

26-Sep 2008 (Zesstra)
  - (interpret.c, interpret.h)
    Changed return type of push_error_handler() to svalue_t *.
    Added a simple generic error handler structure for holding a single
      buffer, an error handling function for freeing the buffer and a function
      for allocating memory on the heap and simultaneously pushing the